<resources>
    <string name="app_name">contact_ranjana_C093794_android</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="my_contacts">My Contacts</string>
    <string name="update_contact">Update Contact</string>
    <string name="update">Update</string>
</resources>